--- a/staff-core/src/main/resources/application.properties
+++ b/staff-core/src/main/resources/application.properties
@@ -17,7 +17,7 @@ mybatis-plus.mapper-locations=classpath:com/rabbiter/staff/mapper/xml/*.xml
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
 
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
-spring.http.encoding.force=true
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
 server.tomcat.uri-encoding=UTF-8
